cambios en checkOut

--- a/hades-mongo-web/src/main/webapp/checkOut.xhtml
+++ b/hades-mongo-web/src/main/webapp/checkOut.xhtml
@@ -8,92 +8,84 @@
       xmlns:ui="http://java.sun.com/jsf/facelets">
     <ui:composition template="/templates/plantilla.xhtml">
         <ui:define name="contenido">
-            <p:panel id="mainPnl" header="Check Out" style="width: 50%; margin: auto;">
+            <p:panel id="mainPnl" header="Check Out" style="width: 80%; margin: auto;">
                 <p:panel id="buscPnl" header="B&#250;squeda">
-                    <p:panelGrid columns="4" style="margin-top:10px">
-                        <p:outputLabel for="filtroCmb" value="Buscar:" />
-                        <p:selectOneMenu id="filtroCmb" value="#{tourBean.filtro}" required="true"  valueChangeListener="#{tourBean.cambiarFiltro()}" >
+                    <p:panelGrid columns="2" style="margin-top:10px">
+                        <p:selectOneMenu id="filtroCmb" value="#{checkOutBean.filtro}" required="true"  valueChangeListener="#{checkOutBean.cambiarFiltro()}" >
                             <p:ajax update="@form"/>
-                            <f:selectItem itemLabel="Tipo Tour" itemValue="TIP" />
-                            <f:selectItem itemLabel="Fechas" itemValue="FEC" />
+                            <f:selectItem itemLabel="Codigo Reserva" itemValue="RES" />
+                            <f:selectItem itemLabel="Identificacion Cliente" itemValue="CLI" />
                         </p:selectOneMenu>
-                        <p:selectOneMenu id="tiposTourCmb" value="#{tourBean.tipoTourBusqueda}" rendered="#{tourBean.enBusquedaPorTipo}">
-                            <f:selectItems var="tipoTour" value="#{tourBean.tiposTours}" itemLabel="#{tipoTour.nombre}" itemValue="#{tipoTour.codigo}" />
-                        </p:selectOneMenu>
-                        <p:calendar id="fechaInicioCal" value="#{tourBean.fechaInicioBusqueda}" showOn="button" pattern="MM/dd/yyyy" rendered="#{not tourBean.enBusquedaPorTipo}" />
-                        <p:calendar id="fechaFinCal" value="#{tourBean.fechaFinBusqueda}" showOn="button" pattern="MM/dd/yyyy" rendered="#{not tourBean.enBusquedaPorTipo}" />
+                        <p:inputText id="buscTxt" value="#{checkOutBean.auxBusqueda}" required="true" />
                     </p:panelGrid>
-                    <p:commandButton id="buscarCmd" value="Buscar" actionListener="#{tourBean.buscar()}" update="@form" />
+                    <p:commandButton id="buscarCmd" value="Buscar" actionListener="#{checkOutBean.buscar()}" update="@form" />
                 </p:panel>
-                <p:panel id="clientePnl" header="Cliente">
-                    <p:outputLabel for="identificacion" value="Identificacion:" />
-                    <p:inputText id="identificacion" value="#{checkOutBean.identificacionCliente}" required="true" >
-                    </p:inputText>
-                    <p:commandButton value="Buscar" actionListener="#{checkOutBean.buscar(checkOutBean.identificacionCliente)}" update="@form"/>    
-                    <p:panel id="mostrPnl" header="Tours de Cliente" rendered="#{checkOutBean.enEncontrado}">
-                        <p:dataTable var="checkOut" value="#{checkOutBean.checkOut}" 
-                                     selectionMode="single" selection="#{checkOutBean.checkOutSel}" rowKey="#{checkOut.id}">
-                            <p:ajax event="rowSelect" update="@form" />
-                            <p:ajax event="rowUnselect" update="@form" />
-                            <p:column headerText="Codigo Reserva" style="width: 25%">
-                                <h:outputText value="#{checkOutBean.reserva.codigo}" />
-                            </p:column>
-                            <p:column headerText="Tour" style="width: 25%">
-                                <h:outputText value="#{checkOutBean.tour.nombre}" />
-                            </p:column>
-                            <p:column headerText="Total Pagar Consumos" style="width: 25%">
-                                <h:outputText value="#{checkOutBean.checkOut.totalConsumos}" />
-                            </p:column>
-                            <p:column headerText="Total Pagar Equipaje" style="width: 25%">
-                                <h:outputText value="#{checkOutBean.checkOut.totalEquipaje}" />
-                            </p:column>
-                            <p:column headerText="Estado" style="width: 25%">
-                                <h:outputText value="#{checkOutBean.checkOut.estado}" />
-                            </p:column>
-                        </p:dataTable>
-                        <p:commandButton id="detConsumos" value="Detalle Consumos" actionListener="#{checkOutBean.mostrarConsumos()}" update="@form" disabled="#{checkOutBean.checkOutSel eq null}"/>      
-                        <p:commandButton id="detEquipaje" value="Detalle Equipaje" actionListener="#{checkOutBean.mostrarEquipaje()}" update="@form" disabled="#{checkOutBean.checkOutSel eq null}"/>      
-                        <p:commandButton id="facturar" value="Facturar" actionListener="#{checkOutBean.facturar()}" update="@form" disabled="#{checkOutBean.checkOutSel eq null}"/>      
-                    </p:panel>
-                </p:panel>
-                <p:panel header="Detalle de Consumos" visible="#{checkOutBean.habilitaFormConsumos}">
-                    <p:dataTable var="consumo" value="#{checkOutBean.consumo}" rowKey="#{consumo.codigo}">
+                <p:panel id="mostrPnl1" header="Reservas" rendered="#{checkOutBean.enEncontrado}" style="height: auto" >
+                    <p:dataTable var="reserva" value="#{checkOutBean.reservas}" 
+                                 selectionMode="single" selection="#{checkOutBean.reservaSel}" rowKey="#{reserva.codigo}" style="height: auto">
+                        <p:ajax event="rowSelect" update="@form" />
+                        <p:ajax event="rowUnselect" update="@form" />
                         <p:column headerText="Codigo Reserva" style="width: 25%">
                             <h:outputText value="#{checkOutBean.reserva.codigo}" />
                         </p:column>
                         <p:column headerText="Tour" style="width: 25%">
-                            <h:outputText value="#{checkOutBean.tour.nombre}" />
+                            <h:outputText value="#{checkOutBean.reserva.tour.nombre}" />
+                        </p:column>
+                        <p:column headerText="Camarote" style="width: 25%">
+                            <h:outputText value="#{checkOutBean.reserva.camarote.numero}" />
+                        </p:column>
+                        <p:column headerText="Cliente" style="width: 25%">
+                            <h:outputText value="#{checkOutBean.reserva.cliente.nombre}" />
+                        </p:column>
+                        <p:column headerText="Estado" style="width: 25%">
+                            <h:outputText value="#{checkOutBean.reserva.estado}" />
+                        </p:column>
+                    </p:dataTable>
+                    <p:commandButton id="detConsumos" value="Detalle Consumos" actionListener="#{checkOutBean.mostrarConsumos()}" update="@form" disabled="#{checkOutBean.reservaSel eq null}"/>      
+                    <p:commandButton id="detEquipaje" value="Detalle Equipaje" actionListener="#{checkOutBean.mostrarEquipaje()}" update="@form" disabled="#{checkOutBean.reservaSel eq null}"/>      
+                    <p:commandButton id="facturar" value="Facturar" actionListener="#{checkOutBean.facturar()}" update="@form" disabled="#{checkOutBean.reservaSel eq null}"/>      
+                </p:panel>
+                <p:panel header="Detalle de Consumos" visible="#{checkOutBean.habilitaFormConsumos}">
+                    <p:dataTable var="consumo" value="#{checkOutBean.consumos}" rowKey="#{consumo.codigo}">
+                        <p:column headerText="Codigo Reserva" style="width: 25%">
+                            <h:outputText value="#{checkOutBean.reserva.codigo}" />
+                        </p:column>
+                        <p:column headerText="Tour" style="width: 25%">
+                            <h:outputText value="#{checkOutBean.reserva.tour.nombre}" />
                         </p:column>
                         <p:column headerText="Consumo" style="width: 25%">
-                            <h:outputText value="#{checkOutBean.consumo.menu.nombre}" />
+                            <h:outputText value="#{consumo.menu.nombre}" />
                         </p:column>
                         <p:column headerText="Cantidad" style="width: 25%">
-                            <h:outputText value="#{checkOutBean.consumo.cantidad}" />
+                            <h:outputText value="#{consumo.cantidad}" />
                         </p:column>
                         <p:column headerText="Valor" style="width: 25%">
-                            <h:outputText value="#{checkOutBean.consumo.menu.precio}" />
+                            <h:outputText value="#{consumo.menu.precio}" />
                         </p:column>
                         <p:column headerText="Total" style="width: 25%">
-                            <h:outputText value="#{checkOutBean.consumo.valor}" />
+                            <h:outputText value="#{consumo.valor}" />
                         </p:column>
-                         <p:column headerText="Fecha Consumo" style="width: 25%">
-                             <h:outputText value="#{checkOutBean.consumo.fecha}" />
+                        <p:column headerText="Fecha Consumo" style="width: 25%">
+                            <h:outputText value="#{consumo.fecha}" />
+                        </p:column>
+                        <p:column headerText="Referencia" style="width: 25%">
+                            <h:outputText value="#{consumo.referencia}" />
                         </p:column>
                     </p:dataTable>
                 </p:panel> 
                 <p:panel header="Detalle de Equipaje" visible="#{checkOutBean.habilitaFormEquipaje}">
-                    <p:dataTable var="turista" value="#{checkOutBean.reserva.codigo}" rowKey="#{turista.id}">
+                    <p:dataTable var="turista" value="#{checkOutBean.turistas}" rowKey="#{turista.id}">
                         <p:column headerText="Codigo Reserva" style="width: 25%">
                             <h:outputText value="#{checkOutBean.reserva.codigo}" />
                         </p:column>
                         <p:column headerText="Turista" style="width: 25%">
-                            <h:outputText value="#{checkOutBean.turista.nombre}" />
+                            <h:outputText value="#{turista.nombre}" />
                         </p:column>
                         <p:column headerText="Peso Equipaje" style="width: 25%">
-                            <h:outputText value="#{checkOutBean.turista.pesoMaleta}" />
+                            <h:outputText value="#{turista.pesoMaleta}" />
                         </p:column>
                         <p:column headerText="Valor a Pagar Equipaje" style="width: 25%">
-                            <h:outputText value="#{checkOutBean.turista.valorMaleta}" />
+                            <h:outputText value="#{turista.valorMaleta}" />
                         </p:column>
                     </p:dataTable>
                 </p:panel> 
