--- a/hades-mongo-web/src/main/webapp/consumo.xhtml
+++ b/hades-mongo-web/src/main/webapp/consumo.xhtml
@@ -37,6 +37,7 @@
                 <p:commandButton value="Seleccionar" actionListener="#{consumoBean.elegirReserva()}" update="@form"/>
                 </p:panel>
                 <p:panel header="Agregar Consumo" rendered="#{consumoBean.enReservaElegido}">
+                   
                     <p:dataGrid var="menu" value="#{consumoBean.menus}" columns="3" layout="grid"
                             rows="12" paginator="true" id="menuGrd"
                             paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
@@ -69,9 +70,11 @@
                             <h:outputText value="Nombre:" />
                             <h:outputText value="#{consumoBean.menuSel.nombre}" />
                             <h:outputText value="Descripcion:" />
-                            <h:outputText value="$#{consumoBean.menuSel.descripcion}" />
+                            <h:outputText value="#{consumoBean.menuSel.descripcion}" />
                             <h:outputText value="Precio:" />
                             <h:outputText value="$#{consumoBean.menuSel.precio}" />
+                            <h:outputText value="Cantidad:" />
+                            <h:inputText  value="#{consumoBean.consumo.cantidad}" required="true" requiredMessage="Debe ingresara la cantidad" style="background-color: black"/>
 
                             
                         </p:panelGrid>
