corregido error agregar camarote en la reserva

--- a/hades-mongo-web/src/main/webapp/reserva.xhtml
+++ b/hades-mongo-web/src/main/webapp/reserva.xhtml
@@ -85,8 +85,8 @@
                     </p:dataTable>
                 </p:panel>
                 <p:panel id="camarotePnl" header="Camarotes" rendered="#{reservaBean.enEncontrado}">
-                    <p:dataTable id="camarotesTbl" var="camarote" value="#{reservaBean.camarotes}"
-                                 selectionMode="multiple" selection="#{reservaBean.camarotesSel}" rowKey="#{camarote.codigo}">
+                    <p:dataTable id="camarotesTbl" var="camarote" value="#{reservaBean.camarote}"
+                                 selectionMode="single" selection="#{reservaBean.camaroteSel}" rowKey="#{camarote.codigo}">
                         <p:ajax event="rowSelect" update="@form" />
                         <p:ajax event="rowUnselect" update="@form" />
                         <p:column headerText="Numero">
