--- a/hades-mongo-web/src/main/webapp/reserva.xhtml
+++ b/hades-mongo-web/src/main/webapp/reserva.xhtml
@@ -85,7 +85,7 @@
                     </p:dataTable>
                 </p:panel>
                 <p:panel id="camarotePnl" header="Camarotes" rendered="#{reservaBean.enEncontrado}">
-                    <p:dataTable id="camarotesTbl" var="camarote" value="#{reservaBean.camarote}"
+                    <p:dataTable id="camarotesTbl" var="camarote" value="#{reservaBean.camarotes}"
                                  selectionMode="single" selection="#{reservaBean.camaroteSel}" rowKey="#{camarote.codigo}">
                         <p:ajax event="rowSelect" update="@form" />
                         <p:ajax event="rowUnselect" update="@form" />
